; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/utils/extr_edit.c_clear_right.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/utils/extr_edit.c_clear_right.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cmdbuf_pos = common dso_local global i64 0, align 8
@cmdbuf_len = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @clear_right to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_right() #0 {
  %1 = load i64, i64* @cmdbuf_pos, align 8
  %2 = load i64, i64* @cmdbuf_len, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %9

5:                                                ; preds = %0
  %6 = call i32 (...) @edit_clear_line()
  %7 = load i64, i64* @cmdbuf_pos, align 8
  store i64 %7, i64* @cmdbuf_len, align 8
  %8 = call i32 (...) @edit_redraw()
  br label %9

9:                                                ; preds = %5, %4
  ret void
}

declare dso_local i32 @edit_clear_line(...) #1

declare dso_local i32 @edit_redraw(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
